--- a/src/pages/Login/Login.module.css
+++ b/src/pages/Login/Login.module.css
@@ -1,5 +1,5 @@
 .container {
-  height: 92vh;
+  height: 91vh;
   display: flex;
   overflow: hidden;
   align-items: center;
